--- a/books/apps/index/templates/search.html
+++ b/books/apps/index/templates/search.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <form class="row mt-2 mb-2" action="{{ url("index:search", args=[title, author, category_id, is_public]) }}" method="post">
+    <form class="row mt-2 mb-2" action="{{ url("index:search", args=[title, author, category_id]) }}" method="post">
         <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
         <div class="col-md-12">
             {{ form.title }}
@@ -22,29 +22,44 @@
 
     </form>
 
-    <div class="row">
-        {% if books %}
-        {% for book in books %}
-            {% if book.is_public %}
-                <div class="col-md-3">
 
-                  <div class="card mb-4 shadow-sm">
-                      <img src="{{ book.image.image_link.url }}" class="card-img-top" style="height: 300px;" alt="">
-                    <div class="card-body">
-                        <a href="{{ url("index:book", args=[book.id]) }}"><strong class="card-text">{{ book.title }}</strong></a>
-                      <div class="d-flex justify-content-between align-items-center">
-                        <small class="text-muted">Категорія: <strong><a href="{{ url('index:category', args=[book.category.id]) }}">{{ book.category.name }}</a></strong></small>
-                      </div>
-                        <i>Переглядів: <strong>{{ book.views }}</strong></i><br>
-                        <i>Вподобань: <strong>{{ book.likes }}</strong></i><br>
-                    </div>
+        {% if books %}
+    <div class="row">
+
+
+        {% for book in books %}
+
+            <div class="col-md-3">
+
+              <div class="card mb-4 shadow-sm">
+                  <img src="{{ book.image }}" class="card-img-top" style="height: 300px;" alt="">
+                <div class="card-body">
+                    <a href="{{ url("index:book", args=[book.id]) }}"><strong class="card-text">{{ book.title }}</strong></a>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <small class="text-muted">Категорія: <strong><a href="{{ url('index:category', args=[book.category.id]) }}">{{ book.category.name }}</a></strong></small>
                   </div>
+
+
+                    {% if (book.uploadAuthor.id == request.user.id|string) %}
+                        <a href="{{ url("index:edit_book", args=[book.id]) }}" class="btn btn-sm btn-outline-secondary">Редагувати</a>
+                    {% endif %}
+                    {% if request.user.has_perm("auth.admin") %}
+                        <a class="btn btn-sm btn-outline-danger" href="{{ url("index:admin_edit_book", args=[book.id]) }}">Змінити статус</a>
+                    {% endif %}
+                    <br>
+                    {% for file in book.referencedBookFile[:4] %}
+                        <a href="{{ file.file }}">{{ file.expansion }} |</a>
+                    {% endfor %}
                 </div>
-            {% endif %}
+              </div>
+            </div>
+
         {% endfor %}
+
+        </div>
         {% else %}
             <strong>Не має книг по вашому пошуку</strong>
         {% endif %}
-    </div>
+
 
 {% endblock %}
