--- a/books/apps/index/templates/base.html
+++ b/books/apps/index/templates/base.html
@@ -5,12 +5,9 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>{% block title %}{% endblock %}</title>
       <link rel="stylesheet" href="{{ static('bootstrap.min.css') }}">
-        <script
-          src="https://code.jquery.com/jquery-3.5.1.min.js"
-          integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-          crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+        <script src="{{ static('jquery.js') }}"></script>
+      <script src="{{ static('popper.js') }}"></script>
+      <script src="{{ static('bootatrap.js') }}"></script>
 
        <script src="{{ static('bootstrap-select.min.js') }}"></script>
        <link rel="stylesheet" href="{{ static("bootstrap-select.min.css") }}">
@@ -29,6 +26,10 @@
                text-align: center;
                 vertical-align: middle;
                 line-height: 20px;
+           }
+           .page_arrows{
+               display: flex;
+               justify-content: space-between;
            }
        </style>
    </head>
